--- a/styles/style.css
+++ b/styles/style.css
@@ -180,6 +180,7 @@ main {
     border: 1px solid rgb(215, 214, 214);
     margin: 4px;
     border-radius: 10px;
+    background-color: #cec7ad14;
 
 }
 
