--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@ main {
 }
 
 .first-section {
-    background-color: rgba(0, 0, 0, 0.912);
+    background-color: rgb(2, 34, 34);
     border-radius: 20px;
 }
 
@@ -141,7 +141,7 @@ main {
 .menu {
     margin-top: 4px;
     height: 238.5px;
-    background: rgb(30, 1, 1);
+    background: rgba(27, 32, 32, 0.874);
     border-radius: 10px;
 }
 
@@ -217,7 +217,7 @@ main {
 footer {
     background-color: black;
     width: 100%;
-    height: 300px;
+    height: 320px;
 }
 
 .fotter-section {
@@ -249,4 +249,81 @@ footer {
     padding: 4px;
     font-size: 20px;
 
+}
+
+/* -------------Media Query for Mobile---------------- */
+@media only screen and (max-width:600px) {
+    main {
+        width: 100%;
+    }
+
+    .first-section {
+        background-color: rgb(4, 35, 35);
+        width: 100%;
+    }
+
+    .section-details {
+        grid-template-columns: repeat(1, 0fr);
+        height: 100%;
+        width: 100%;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .Fifa {
+        width: 100%;
+        height: 100%;
+    }
+
+    .half-width {
+        padding-left: 0px;
+        height: 100%;
+        width: 100%;
+    }
+
+    .second-section {
+        display: grid;
+        grid-template-columns: repeat(1, 0fr);
+        text-align: center;
+        justify-content: center;
+
+    }
+
+    .menu {
+        background-color: white;
+    }
+
+    .side-nav {
+        width: 100%;
+        text-align: center;
+
+    }
+
+    .side-nav a {
+        border: 1px solid black;
+    }
+
+    .all-blogs {
+        display: grid;
+        grid-template-columns: repeat(1, 0fr);
+    }
+
+    footer {
+        background-color: black;
+        width: 100%;
+        height: auto;
+    }
+
+    .fotter-section .contact a {
+        display: grid;
+        grid-template-rows: repeat(7, 0fr);
+        text-align: center;
+        margin-top: 10px;
+    }
+
+    #icon {
+        display: grid;
+        grid-template-columns: repeat(4, 0fr);
+        justify-content: center;
+    }
 }
