--- a/upcomming-match/upcomming-match.css
+++ b/upcomming-match/upcomming-match.css
@@ -15,7 +15,7 @@ main {
 }
 
 .first-section {
-    background-color: rgba(0, 0, 0, 0.912);
+    background-color: rgb(11, 42, 43);
     border-radius: 20px;
 }
 
@@ -94,7 +94,7 @@ main {
 .menu {
     margin-top: 4px;
     height: 238.5px;
-    background: rgb(30, 1, 1);
+    background-color: rgba(27, 32, 32, 0.874);
     border-radius: 10px;
 }
 
@@ -108,7 +108,6 @@ main {
 
 .side-nav a {
     font-family: 'Poppins', sans-serif;
-    font-weight: ;
     width: 180px;
     margin: 0 auto;
     margin-top: 20px;
@@ -122,7 +121,7 @@ main {
 }
 
 .side-nav a:hover {
-    background-color: darkcyan;
+    background-color: rgba(5, 128, 128, 0.955);
     color: white;
 }
 
@@ -155,7 +154,6 @@ main {
 
 .blogs .images {
     display: flex;
-    text-align: ;
     width: 240px;
 
 }
@@ -221,4 +219,83 @@ footer {
     padding: 4px;
     font-size: 20px;
 
+}
+
+
+
+/* -------------Media Query for Mobile---------------- */
+@media only screen and (max-width:600px) {
+    main {
+        width: 100%;
+    }
+
+    .first-section {
+        background-color: rgb(4, 35, 35);
+        width: 100%;
+    }
+
+    .section-details {
+        grid-template-columns: repeat(1, 0fr);
+        height: 100%;
+        width: 100%;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .Fifa {
+        width: 100%;
+        height: 100%;
+    }
+
+    .half-width {
+        padding-left: 0px;
+        height: 100%;
+        width: 100%;
+    }
+
+    .second-section {
+        display: grid;
+        grid-template-columns: repeat(1, 0fr);
+        text-align: center;
+        justify-content: center;
+
+    }
+
+    .menu {
+        background-color: white;
+    }
+
+    .side-nav {
+        width: 100%;
+        text-align: center;
+
+    }
+
+    .side-nav a {
+        border: 1px solid black;
+    }
+
+    .all-blogs {
+        display: grid;
+        grid-template-columns: repeat(1, 0fr);
+    }
+
+    footer {
+        background-color: black;
+        width: 100%;
+        height: auto;
+    }
+
+    .fotter-section .contact a {
+        display: grid;
+        grid-template-rows: repeat(7, 0fr);
+        text-align: center;
+        margin-top: 10px;
+    }
+
+    #icon {
+        display: grid;
+        grid-template-columns: repeat(4, 0fr);
+        justify-content: center;
+    }
 }
