--- a/styles/style.css
+++ b/styles/style.css
@@ -89,8 +89,8 @@ main {
 }
 
 .half-width img {
-    width: 82.3%;
-    height: 100%;
+    width: 88%;
+    height: 95%;
     padding: 0px;
 }
 
@@ -284,9 +284,8 @@ footer {
 
     .section-details {
         grid-template-columns: repeat(1, 0fr);
-        height: 550px;
+        height: 570px;
         width: 100%;
-        text-align: center;
         justify-content: center;
     }
 
@@ -375,7 +374,7 @@ footer {
             top: 0px;
         }
 
-        25% {
+        /* 25% {
 
             left: 20px;
             top: 0px;
@@ -391,7 +390,7 @@ footer {
 
             left: 60px;
             top: 0px;
-        }
+        } */
 
         100% {
 
@@ -430,7 +429,7 @@ footer {
     .half-width img {
 
         width: 80%;
-        height: 80%;
+        height: 290px;
     }
 
     .second-section {
@@ -489,8 +488,6 @@ footer {
         width: 100%;
         height: auto;
     }
-
-    .contac {}
 
     .fotter-section .contact a {
         justify-content: space-between;
