--- a/upcomming-match/upcomming-match.css
+++ b/upcomming-match/upcomming-match.css
@@ -33,25 +33,25 @@ main {
 
     25% {
 
-        left: 20px;
-        top: 0px;
+        left: 0px;
+        top: 40px;
     }
 
     50% {
 
-        left: 40px;
-        top: 120px;
+        left: 70px;
+        top: 40px;
     }
 
     75% {
 
-        left: 60px;
+        left: 70px;
         top: 0px;
     }
 
     100% {
 
-        left: 80px;
+        left: 0px;
         top: 0px;
     }
 }
@@ -67,7 +67,7 @@ main {
     height: 70px;
     width: 40px;
     border-radius: 35px;
-    animation: slider 2s ease-in 0s infinite alternate;
+    animation: slider 5s ease-in 0s infinite both;
     animation-play-state: running;
     position: relative;
     border-radius: 50px 40px;
@@ -423,6 +423,11 @@ Media Query for Tablet
             top: 0px;
         }
     }
+
+    .football img {
+        animation: slider 3s ease-in 0s infinite alternate;
+    }
+
 
     /*..................... End Slider Query............ */
 
